--- a/client/styles.css
+++ b/client/styles.css
@@ -1,10 +1,10 @@
-/* body {
-  background: radial-gradient(#302b63, #24243e);
+body {
+  background: radial-gradient(#8ad2f3, #d3fadf);
   width: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
-} */
+  font-family: 'Times New Roman', sans-serif;
+}
 
 #comments {
   size: 100;
@@ -20,6 +20,7 @@
 }
 
 #citySearch {
+  width: 50%;
   background-color: #f7f7f9;
   border: 3px solid black;
 }
@@ -63,6 +64,7 @@ button:hover {
 .google-map {
   width: 100%;
   height: 100px;
+  border: 1px solid black;
 }
 
 .pin {
@@ -108,7 +110,7 @@ button:hover {
   border: 3px solid black;
 }
 
-#contentName {
+/* #contentName { */
   /* border: 3px solid black; */
   /* background-color: blue; */
-}
+/* } */
